2005-10-04  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scanobj.in: patch from Andrae Steiner to add missing ';'
	(#317938)

2005-09-29  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
          additionally point people to the gnome-wiki

	* gtkdoc-mkdb.in:
          don't warn on macros with return docs (#314267)

2005-09-28 Matthias Clasen <mclasen@redhat.com>

	Show signal flags:  (#316789)

	* gtkdoc-scangobj.in: Emit flags for signals
	as <FLAGS> element in $MODULE.signals

	* gtkdoc-mkdb.in: Emit signal flags similar
	to property flags.

	* gtkdoc-mktmpl.in: Handle <FLAGS> here, too.

2005-09-20  Stefan Kost  <ensonic@users.sf.net>

	* doc/README:
	* doc/authors.txt:
	* doc/gnome.txt:
	* doc/sections-file.txt:
	* doc/setting-up.txt:
	* doc/style-guide.txt:
	* gtkdoc-common.pl.in:
          adding a note about where the new docs are

2005-09-15  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in (ScanHeader): 
	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): patch from dodji seketeli to handle
	functions returning explicit enums. (#303337)

        Patch from Stepan Kasal:

	* gtkdoc-mkhtml.in, gtkdoc-mkman.in, gtkdocize.in: Add datarootdir
	variable, for compatibility with future Autoconf releases.

	* configure.in (PACKAGE_DATA_DIR): Simplify the computation;
	use a local macro AC_DEFINE_DIR, based on a macro from Autoconf
	macro archive. (#313876)

2005-09-15  Damon Chaplin  <damon@gnome.org>
	
	* gtkdoc-scangobj.in: Patch from Stepan Kasal to avoid some gcc
	warnings. (#312985)
	
	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: Use brackets around open() arguments to avoid
	precedence problems. (#314838)

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: Output more messages about compilation, linking
	and running of scanner, to try to help track down any problems.
	Also use "sh -c" to run the scanner (#167688)

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: patch from Stefan Kost to improve error messages,