@@ -1,3 +1,8 @@
+2005-10-05  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-common.pl.in:
+          revert exchanging &nbsp; with &#160;
+
 2005-10-04  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-scanobj.in: patch from Andrae Steiner to add missing ';'
